[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Menu/Slot1_script.gd" type="Script" id=1]
[ext_resource path="res://scenes/Menu/menu_script.gd" type="Script" id=2]

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )

[node name="Slot1" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="Slot2" type="Area2D" parent="."]
script = ExtResource( 1 )

[connection signal="new_item_entered" from="Slot1" to="." method="_on_Slot1_new_item_entered"]
